--- a/_notebooks/2022-12-07-scores.ipynb
+++ b/_notebooks/2022-12-07-scores.ipynb
@@ -348,6 +348,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Week 2 Vocab: \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Week 3 Vocab:\n",
     "Variables, Data Types, Assignment Operators - These methods are all used to set values, datatypes are different types of data types and assignment operators are varaibles that are set to equal other variables\n",
     "Managing Complexity with Variables:  Lists, 2D Lists, Dictionaries, Class - These are different ways you can sort your elements and data values. The different use cases are for different types of data which need for a certain python function\n",
     "Algorithms, Sequence, Selection, Iteration- Different ways to run a piece of code multiple times in different aspects of the beatiful language of python.\n",
