--- a/_notebooks/2022-12-11-Lesson12-13.ipynb
+++ b/_notebooks/2022-12-11-Lesson12-13.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "source": [
     "# Note Template\n",
-    "- comments: true"
+    "> 3.12-3.13\n",
+    "- comments: true\n",
+    "- title: 3.12-3.13"
    ]
   },
   {
