--- a/_notebooks/2022-12-12-hw.ipynb
+++ b/_notebooks/2022-12-12-hw.ipynb
@@ -5,9 +5,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "# Unit 3 Lesson 16, Student Copy\n",
+    "> Unit 3.16\n",
     "- toc: true\n",
-    "- comments: true\n"
+    "- comments: true\n",
+    "- title: 3.16\n"
    ]
   },
   {
