--- a/_notebooks/2022-12-12-hw.ipynb
+++ b/_notebooks/2022-12-12-hw.ipynb
@@ -5,10 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "# Unit 3 Lesson 16, Student Copy\n",
+    "# Unit 3 Lesson 16 Student Copy\n",
     "> Unit 3.16\n",
-    "\n",
     "- toc: true\n",
     "- comments: true\n",
     "\n"
