--- a/_notebooks/2022-12-07-scores.ipynb
+++ b/_notebooks/2022-12-07-scores.ipynb
@@ -5,13 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scores:\n",
-    "1. Section 1-2\n",
-    "2. Section 3-4\n",
-    "3. Section 5-7 - 0.8\n",
-    "4. Section 8,10- 0.8\n",
-    "5. Section 9,11 - 0.75\n",
-    "6. Section 12-13 - 0.9"
+    "# Vocab Page\n",
+    "> Vocab Page\n",
+    "\n",
+    "- toc: true \n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [Posts]\n",
+    "- title: Vocab Page"
    ]
   },
   {
@@ -348,7 +349,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Week 2 Vocab: \n"
+    "Week 2 Vocab: \n",
+    "Bits, Bytes, Hexadecimal / Nibbles - Different types of ways numbers are stored including different bases such as 2,8,16\n",
+    "Binary Numbers: Unsigned Integer, Signed Integer, Floating Point- Different types of numbers for example an integer is a whole num but a float is a decimal number\n",
+    "Binary Data Abstractions: Boolean, ASCII, Unicode, RGB- Data storage ways for example ASCII is using characters, the rest are different types of data storage. "
    ]
   },
   {
