--- a/_notebooks/2023-01-04-Projectreview.ipynb
+++ b/_notebooks/2023-01-04-Projectreview.ipynb
@@ -86,6 +86,15 @@
     "|Testing|0|0|The Calls dont fit the neccessary requirements needed to earn credit|\n",
     "Total: 4/6"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overall Conclunclusion:\n",
+    "My results may differ from the collegeboard grading for a few reasons. Collegeboard is more strict with lists and with the functions of lists being explained. While I believe that if there is a list it is worthy of getting the points. Another difference between our grading is just that they are more strict. They expect the response to be perfect in order for points to be awarded to the person who submits. "
+   ]
   }
  ],
  "metadata": {
