--- a/_notebooks/2023-03-07-MCQ.ipynb
+++ b/_notebooks/2023-03-07-MCQ.ipynb
@@ -92,7 +92,7 @@
    "source": [
     "# Question 49\n",
     "![image.png](attachment:image.png)\n",
-    "The reason my answer for this question was incorrect was because I didnt correctly"
+    "The reason my answer for this question was incorrect was because I didnt correctly read the question which was needing there to be more understanding becuase I wanst fully able to grasp the concept that is mentioned in this question. "
    ]
   },
   {
@@ -107,6 +107,16 @@
     "# Question 50\n",
     "![image.png](attachment:image.png)\n",
     "My answer choices for this question were incorrect because one of the options wasn't fully the output that would be wanted to answer this question. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reflection\n",
+    "\n",
+    "Overall my performance was much better than I had on the last test which shows how the overall coding has helped with my coding understanding. The questions are tricky so that was the main reason for me missing the points that I missed throughout the test. Furthermore I should spend more time on making sure that "
    ]
   }
  ],
