--- a/_notebooks/2023-03-07-MCQ.ipynb
+++ b/_notebooks/2023-03-07-MCQ.ipynb
@@ -12,7 +12,8 @@
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [Posts]\n",
-    "- title: MCQ Corrections"
+    "- title: MCQ Corrections\n",
+    "- layouts:base"
    ]
   },
   {
