--- a/_notebooks/2023-03-07-MCQ.ipynb
+++ b/_notebooks/2023-03-07-MCQ.ipynb
@@ -117,7 +117,7 @@
    "source": [
     "# Reflection\n",
     "\n",
-    "Overall my performance was much better than I had on the last test which shows how the overall coding has helped with my coding understanding. The questions are tricky so that was the main reason for me missing the points that I missed throughout the test. Furthermore I should spend more time on making sure that "
+    "Overall my performance was much better than I had on the last test which shows how the overall coding has helped with my coding understanding. The questions are tricky so that was the main reason for me missing the points that I missed throughout the test. Furthermore I should spend more time on making sure that I am checking my answers before submitting them to make sure they are correct. This corrects mistakes I make throughout the test. "
    ]
   }
  ],
