--- a/_notebooks/2023-03-07-Datacompression.ipynb
+++ b/_notebooks/2023-03-07-Datacompression.ipynb
@@ -86,6 +86,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code segements goal is to fetch the images from the file in vscode /notebooks/images and then print out those images. The function where it iterates through the images file is where the images are being printed and where they are found. \n",
+    "One quesiton I have from this code segment is if there is any way we can have a more effective way of iterating through the images file. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -631,6 +640,16 @@
     "        display(HTML(ido.html_grey))\n",
     "        \n",
     "    print()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notes: \n",
+    "- The main function of this code segment is to get the images from the images folder and then display those images. Displaying those images creates it in both gray scale and prints out the metadata that is associated with the image. \n",
+    "- One question I have is how the metadata is being found for this picture, I am not able to see where its happening in the code segment. "
    ]
   }
  ],
