--- a/_notebooks/2023-03-09-AP-unit2-3.ipynb
+++ b/_notebooks/2023-03-09-AP-unit2-3.ipynb
@@ -552,6 +552,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Reflection on 2.3\n",
+    "\n",
+    "Overall what we learned in this unit was how we can extract information from a dataframe. The information we can get from a dataframe includes the mean,median,mode,range,min,max of the data. \n",
+    "One question I had was how do we evaluate trends in the data?How can we identify which columns are most useful when wanting to determine the trends in the data?\n",
+    "\n",
+    "What type of accuracy is preffered for the model to be deemed as working?\n",
+    "\n",
+    "Are there any other tools other than Pandas we can use for downloading the data?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Hacks\n",
     "> Early Seed award\n",
     "- Add this Blog to you own Blogging site.\n",
