--- a/_notebooks/2023-03-14-2.4a.ipynb
+++ b/_notebooks/2023-03-14-2.4a.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,6 +206,240 @@
     "        db.session.delete(self)\n",
     "        db.session.commit()\n",
     "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created new uid toby\n",
+      "Created new uid niko\n",
+      "Created new uid lex\n",
+      "Created new uid whit\n",
+      "Created new uid indi\n",
+      "Created new uid raven\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"Database Creation and Testing \"\"\"\n",
+    "\n",
+    "\n",
+    "# Builds working data for testing\n",
+    "def initUsers():\n",
+    "    with app.app_context():\n",
+    "        \"\"\"Create database and tables\"\"\"\n",
+    "        db.create_all()\n",
+    "        \"\"\"Tester data for table\"\"\"\n",
+    "        u1 = User(name='Thomas Edison', uid='toby', password='123toby', dob=datetime(1847, 2, 11))\n",
+    "        u2 = User(name='Nikola Tesla', uid='niko', password='123niko')\n",
+    "        u3 = User(name='Alexander Graham Bell', uid='lex', password='123lex')\n",
+    "        u4 = User(name='Eli Whitney', uid='whit', password='123whit')\n",
+    "        u5 = User(name='Indiana Jones', uid='indi', dob=datetime(1920, 10, 21))\n",
+    "        u6 = User(name='Marion Ravenwood', uid='raven', dob=datetime(1921, 10, 21))\n",
+    "\n",
+    "\n",
+    "        users = [u1, u2, u3, u4, u5, u6]\n",
+    "\n",
+    "        \"\"\"Builds sample user/note(s) data\"\"\"\n",
+    "        for user in users:\n",
+    "            try:\n",
+    "                '''add user to table'''\n",
+    "                object = user.create()\n",
+    "                print(f\"Created new uid {object.uid}\")\n",
+    "            except:  # error raised if object nit created\n",
+    "                '''fails with bad or duplicate data'''\n",
+    "                print(f\"Records exist uid {user.uid}, or error.\")\n",
+    "                \n",
+    "initUsers()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check for given Credentials in users table in sqlite.db\n",
+    "Use of ORM Query object and custom methods to identify user to credentials uid and password\n",
+    "\n",
+    "Comment on purpose of following\n",
+    "User.query.filter_by\n",
+    "user.password"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_by_uid(uid):\n",
+    "    with app.app_context():\n",
+    "        user = User.query.filter_by(_uid=uid).first()\n",
+    "    return user # returns user object\n",
+    "\n",
+    "# Check credentials by finding user and verify password\n",
+    "def check_credentials(uid, password):\n",
+    "    # query email and return user record\n",
+    "    user = find_by_uid(uid)\n",
+    "    if user == None:\n",
+    "        return False\n",
+    "    if (user.is_password(password)):\n",
+    "        return True\n",
+    "    return False\n",
+    "        \n",
+    "#check_credentials(\"indi\", \"123qwerty\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create a new User in table in Sqlite.db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created\n",
+      " {'id': 7, 'name': 'Budda', 'uid': 'Budda', 'dob': '01-09-2007', 'age': 16}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create():\n",
+    "    # optimize user time to see if uid exists\n",
+    "    uid = input(\"Enter your user id:\")\n",
+    "    user = find_by_uid(uid)\n",
+    "    try:\n",
+    "        print(\"Found\\n\", user.read())\n",
+    "        return\n",
+    "    except:\n",
+    "        pass # keep going\n",
+    "    \n",
+    "    # request value that ensure creating valid object\n",
+    "    name = input(\"Enter your name:\")\n",
+    "    password = input(\"Enter your password\")\n",
+    "    \n",
+    "    # Initialize User object before date\n",
+    "    user = User(name=name, \n",
+    "                uid=uid, \n",
+    "                password=password\n",
+    "                )\n",
+    "    \n",
+    "    # create user.dob, fail with today as dob\n",
+    "    dob = input(\"Enter your date of birth 'YYYY-MM-DD'\")\n",
+    "    try:\n",
+    "        user.dob = datetime.strptime(dob, '%Y-%m-%d').date()\n",
+    "    except ValueError:\n",
+    "        user.dob = datetime.today()\n",
+    "        print(f\"Invalid date {dob} require YYYY-mm-dd, date defaulted to {user.dob}\")\n",
+    "           \n",
+    "    # write object to database\n",
+    "    with app.app_context():\n",
+    "        try:\n",
+    "            object = user.create()\n",
+    "            print(\"Created\\n\", object.read())\n",
+    "        except:  # error raised if object not created\n",
+    "            print(\"Unknown error uid {uid}\")\n",
+    "        \n",
+    "create()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reading users table in sqlite.db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 1,\n",
+       "  'name': 'Thomas Edison',\n",
+       "  'uid': 'toby',\n",
+       "  'dob': '02-11-1847',\n",
+       "  'age': 176},\n",
+       " {'id': 2,\n",
+       "  'name': 'Nikola Tesla',\n",
+       "  'uid': 'niko',\n",
+       "  'dob': '03-14-2023',\n",
+       "  'age': 0},\n",
+       " {'id': 3,\n",
+       "  'name': 'Alexander Graham Bell',\n",
+       "  'uid': 'lex',\n",
+       "  'dob': '03-14-2023',\n",
+       "  'age': 0},\n",
+       " {'id': 4,\n",
+       "  'name': 'Eli Whitney',\n",
+       "  'uid': 'whit',\n",
+       "  'dob': '03-14-2023',\n",
+       "  'age': 0},\n",
+       " {'id': 5,\n",
+       "  'name': 'Indiana Jones',\n",
+       "  'uid': 'indi',\n",
+       "  'dob': '10-21-1920',\n",
+       "  'age': 102},\n",
+       " {'id': 6,\n",
+       "  'name': 'Marion Ravenwood',\n",
+       "  'uid': 'raven',\n",
+       "  'dob': '10-21-1921',\n",
+       "  'age': 101},\n",
+       " {'id': 7, 'name': 'Budda', 'uid': 'Budda', 'dob': '01-09-2007', 'age': 16}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def read():\n",
+    "    with app.app_context():\n",
+    "        table = User.query.all()\n",
+    "    json_ready = [user.read() for user in table] # \"List Comprehensions\", for each user add user.read() to list\n",
+    "    return json_ready\n",
+    "\n",
+    "read()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hacks"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add this Blog to you own Blogging site. In the Blog add notes and observations on each code cell.\n",
+    "Change blog to your own database.\n",
+    "Add additional CRUD\n",
+    "Add Update functionality to this blog.\n",
+    "Add Delete functionality to this blog."
    ]
   }
  ],
