--- a/_notebooks/2023-03-16-AP2.4B.ipynb
+++ b/_notebooks/2023-03-16-AP2.4B.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reflections for 2.4B\n"
+    "# Reflections for 2.4B\n",
+    "In this unit what we learned so far was creating an sql table and how the different functions of CRUD interact with the sql table. First off we did the Read function, which is where we went through and read all the users from the sql schema table. Another thing we learned was updating the sql table, this is something that we did in both this assignment and the final project from last trimester. It was one of the most important parts of last trimesters project, so its cool to see how much we are building on the skills of last trimester to be able to apply it to this years. "
    ]
   },
   {
