--- a/_notebooks/2023-03-14-2.4a.ipynb
+++ b/_notebooks/2023-03-14-2.4a.ipynb
@@ -427,6 +427,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Reflection\n",
+    "In this unit we learned about breakpoints. The purpose of breakpoints is for debugging, where you run the code block and you can see the errors that are in the code. This is also useful for maximizing the programs effeciency. When you run a code block in vscode theres a button to run and debug, pointing out the issues that are present in your code which must be fixed. Another example is when you do the sql database you can see each part of the CRUD being run and what the outputs are when you have run them. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Hacks"
    ]
   },
@@ -440,6 +449,14 @@
     "Add additional CRUD\n",
     "Add Update functionality to this blog.\n",
     "Add Delete functionality to this blog."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notes/Observations\n"
    ]
   }
  ],
