--- a/_notebooks/2023-03-14-2.4a.ipynb
+++ b/_notebooks/2023-03-14-2.4a.ipynb
@@ -444,11 +444,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add this Blog to you own Blogging site. In the Blog add notes and observations on each code cell.\n",
-    "Change blog to your own database.\n",
-    "Add additional CRUD\n",
-    "Add Update functionality to this blog.\n",
-    "Add Delete functionality to this blog."
+    "> Add this Blog to you own Blogging site. In the Blog add notes and observations on each code cell.\n",
+    "> Change blog to your own database.\n",
+    "> Add additional CRUD\n",
+    "> Add Update functionality to this blog.\n",
+    "> Add Delete functionality to this blog."
    ]
   },
   {
@@ -456,7 +456,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notes/Observations\n"
+    "# Notes/Observations\n",
+    "From the code block where we create the sql database, the main purpose is to go through the userids which are defined and create the schema table. For my questions:\n",
+    "\n",
+    "Is their a more efficient way in which we can create the schema table?\n",
+    "\n",
+    "Why do we need to use the schema() function when we are creating the table and not any other type of command?\n",
+    "\n",
+    "Whats the purpose of listing the comprehensions for each user and add it to the list?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'app' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/prasithchilla/Fastpages/_notebooks/2023-03-14-2.4a.ipynb Cell 17\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-14-2.4a.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m     json_ready \u001b[39m=\u001b[39m [user\u001b[39m.\u001b[39mupdate() \u001b[39mfor\u001b[39;00m user \u001b[39min\u001b[39;00m table] \u001b[39m# \"List Comprehensions\", for each user add user.read() to list\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-14-2.4a.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m json_ready\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-14-2.4a.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m update()\n",
+      "\u001b[1;32m/home/prasithchilla/Fastpages/_notebooks/2023-03-14-2.4a.ipynb Cell 17\u001b[0m in \u001b[0;36mupdate\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-14-2.4a.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mupdate\u001b[39m():\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-14-2.4a.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39mwith\u001b[39;00m app\u001b[39m.\u001b[39mapp_context():\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-14-2.4a.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m         table \u001b[39m=\u001b[39m User\u001b[39m.\u001b[39mquery\u001b[39m.\u001b[39mall()\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-14-2.4a.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m     json_ready \u001b[39m=\u001b[39m [user\u001b[39m.\u001b[39mupdate() \u001b[39mfor\u001b[39;00m user \u001b[39min\u001b[39;00m table] \u001b[39m# \"List Comprehensions\", for each user add user.read() to list\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'app' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Update function\n",
+    "def update():\n",
+    "    with app.app_context():\n",
+    "        table = User.query.all()\n",
+    "    json_ready = [user.update() for user in table] \n",
+    "    return json_ready\n",
+    "\n",
+    "update()"
    ]
   }
  ],
