--- a/_notebooks/2023-03-18-APUnit2.4A.ipynb
+++ b/_notebooks/2023-03-18-APUnit2.4A.ipynb
@@ -5,14 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MCQ Corrections\n",
-    "> MCQ Corrections\n",
+    "# 2.4A\n",
+    "> 2.4A\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [Posts]\n",
-    "- title: MCQ Corrections\n",
+    "- title: 2.4A\n",
     "- layouts:base"
    ]
   },
