--- a/_notebooks/2023-03-18-APUnit2.4A.ipynb
+++ b/_notebooks/2023-03-18-APUnit2.4A.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,9 +242,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Records exist uid toby, or error.\n",
+      "Records exist uid niko, or error.\n",
+      "Records exist uid lex, or error.\n",
+      "Records exist uid whit, or error.\n",
+      "Records exist uid indi, or error.\n",
+      "Records exist uid raven, or error.\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"Database Creation and Testing \"\"\"\n",
     "\n",
@@ -293,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,9 +345,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid date  require YYYY-mm-dd, date defaulted to 03-20-2023\n",
+      "Created\n",
+      " {'id': 7, 'name': '', 'uid': '', 'dob': '03-20-2023', 'age': 0}\n"
+     ]
+    }
+   ],
    "source": [
     "def create():\n",
     "    # optimize user time to see if uid exists\n",
@@ -390,9 +413,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 1,\n",
+       "  'name': 'Thomas Edison',\n",
+       "  'uid': 'toby',\n",
+       "  'dob': '02-11-1847',\n",
+       "  'age': 176},\n",
+       " {'id': 2,\n",
+       "  'name': 'Nikola Tesla',\n",
+       "  'uid': 'niko',\n",
+       "  'dob': '03-20-2023',\n",
+       "  'age': 0},\n",
+       " {'id': 3,\n",
+       "  'name': 'Alexander Graham Bell',\n",
+       "  'uid': 'lex',\n",
+       "  'dob': '03-20-2023',\n",
+       "  'age': 0},\n",
+       " {'id': 4,\n",
+       "  'name': 'Eli Whitney',\n",
+       "  'uid': 'whit',\n",
+       "  'dob': '03-20-2023',\n",
+       "  'age': 0},\n",
+       " {'id': 5,\n",
+       "  'name': 'Indiana Jones',\n",
+       "  'uid': 'indi',\n",
+       "  'dob': '10-21-1920',\n",
+       "  'age': 102},\n",
+       " {'id': 6,\n",
+       "  'name': 'Marion Ravenwood',\n",
+       "  'uid': 'raven',\n",
+       "  'dob': '10-21-1921',\n",
+       "  'age': 101},\n",
+       " {'id': 7, 'name': '', 'uid': '', 'dob': '03-20-2023', 'age': 0}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# SQLAlchemy extracts all users from database, turns each user into JSON\n",
     "def read():\n",
@@ -414,9 +478,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "table players already exists",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[1;32m/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb Cell 15\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m c \u001b[39m=\u001b[39m conn\u001b[39m.\u001b[39mcursor()\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# create table for players\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m c\u001b[39m.\u001b[39;49mexecute(\u001b[39m'''\u001b[39;49m\u001b[39mCREATE TABLE players\u001b[39;49m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m             (id INTEGER PRIMARY KEY,\u001b[39;49m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m             name TEXT,\u001b[39;49m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m             sport TEXT,\u001b[39;49m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39m             team TEXT,\u001b[39;49m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39m             age INTEGER)\u001b[39;49m\u001b[39m'''\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m# create table for teams\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=15'>16</a>\u001b[0m c\u001b[39m.\u001b[39mexecute(\u001b[39m'''\u001b[39m\u001b[39mCREATE TABLE teams\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39m             (id INTEGER PRIMARY KEY,\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39m             name TEXT,\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39m             sport TEXT,\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2023-03-18-APUnit2.4A.ipynb#X20sdnNjb2RlLXJlbW90ZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39m             city TEXT)\u001b[39m\u001b[39m'''\u001b[39m)\n",
+      "\u001b[0;31mOperationalError\u001b[0m: table players already exists"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3\n",
     "\n",
@@ -464,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
